# goblinSlop

./: Cargo.toml  LICENSE  agents.md  deploy.sh  example.env  goblin_slop.db  readme.md
.clinerules/: .coding.md
content/: ai_goblin_schizo_miku.md  altman_miku_goblin_king.md  chinese_grey_market_claude_api_harvesting.md  claude_agents_dreaming_goblin_visions.md  cloudflare_ai_layoffs_goblin_takeover.md  eve_online_deepmind_fenris_ai_testing.md  goblin-mode-2026-global-chaos-index.md  goblin_lore.md  goblin_schizophrenia.md  goblin_tricks.md  miku_slop_ai_goblins.md  musk_openai_tesla_absorption.md  nintendo-switch-price-goblin-economics.md  sam_altman_goblins.md  slop_goblin_manifesto.md  trump_ai_safety_hypocrisy.md
data/: scraped_content.json
data/content/: ai-agent-apocalypse.json  ai-devours-its-tail.json  ai-goblin-schizo-miku.json  ai-self-consumption-machine-eats-tail.json  ai-wakes-the-dead.json  ai_goblin_schizo_miku.json  altman-miku-goblin-king.json  altman_miku_goblin_king.json  chinese-grey-market-claude-api-harvesting.json  chinese_grey_market_claude_api_harvesting.json  claude-agents-dreaming-goblin-visions.json  claude_agents_dreaming_goblin_visions.json  cloudflare-ai-layoffs-goblin-takeover.json  (+69 more)
deploy/: DEPLOYMENT-ISSUES.md  build-and-deploy-lukas.sh  build-and-deploy.sh  goblinSlop.service
scripts/: build.sh  generate_favicon.py  goblinSlop.nginx.conf  install.sh  logs.sh  manage.sh  package.sh
src/: config.rs  content.rs  data_loader.rs  db.rs  json_content_loader.rs  main.rs  routes.rs
static/: robots.txt  site.webmanifest  styles.css
(+23 files in other folders)
