[package]
name = "goblin_slop"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tower-http = { version = "0.5", features = ["fs"] }
pulldown-cmark = "0.11"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"